# qt-media_player

./: .gitignore  参考.txt
cmake-version/: CMakeLists.txt  main.cpp
media_player/: media_player.pro
